fix: resolve account button script path

--- a/src/components/AccountButton.astro
+++ b/src/components/AccountButton.astro
@@ -49,4 +49,4 @@
   </details>
 </div>
 
-<script src="@/scripts/account-button.ts"></script>
+<script type="module" src={Astro.resolve('../scripts/account-button.ts')}></script>
