--- a/src/pages/eventos/cumbre-mundial-2026/index.astro
+++ b/src/pages/eventos/cumbre-mundial-2026/index.astro
@@ -58,7 +58,7 @@ const eventDetails = {
         <div class="mt-12 md:mt-16 relative group">
            <div class="absolute inset-0 bg-brand-gold/20 blur-[40px] rounded-full group-hover:bg-brand-gold/30 transition-all duration-700"></div>
            <img 
-              src="/images/cumbre/-Cumbre Maná 2026 ven y ayúdanos.svg" 
+              src="/images/cumbre/cumbre-2026-logo-white.svg" 
               alt="Ven y Ayúdanos" 
               class="relative w-72 md:w-96 h-auto object-contain animate-float-slow drop-shadow-[0_0_20px_rgba(255,255,255,0.3)]"
            />
