fix(cumbre): update totals on leader name change

--- a/src/components/cumbre2026/InscripcionForm.astro
+++ b/src/components/cumbre2026/InscripcionForm.astro
@@ -563,6 +563,7 @@ const formatPrice = (value) => formatter.format(value);
        if (!leader) return;
        leader.name = name;
        this.renderList();
+       this.updateTotals();
     },
 
     updateLeaderPackage() {
